--- a/deployments.yaml
+++ b/deployments.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: docker.io/myarosh/lab:latest
+          image: docker.io/myarosh/lab:1.0.0
           ports:
             - name: port1
               containerPort: 8000
